--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -13,6 +13,7 @@
 @import "components/news";
 @import "pages/product";
 @import "pages/author";
+@import "pages/gallery";
 @import "components/comments";
 @import "components/modal";
 @import "components/footer";
