--- a/src/scss/components/_news.scss
+++ b/src/scss/components/_news.scss
@@ -3,6 +3,7 @@
   border-bottom: 0px;
   padding: 25px 25px 45px 25px;
   border-radius: 12px 12px 0 0;
+  min-height: 100vh;
   background-color: #fff;
 
   &__list {
