--- a/src/scss/pages/product.scss
+++ b/src/scss/pages/product.scss
@@ -25,6 +25,65 @@
       font-size: 16px;
     }
 
+    table {
+      width: 100%;
+      border: none;
+      margin-bottom: 20px;
+      border-collapse: separate;
+
+      thead th {
+        font-weight: bold;
+        text-align: left;
+        border: none;
+        padding: 10px 15px;
+        background: #ededed;
+        font-size: 14px;
+        border-top: 1px solid #ddd;
+      }
+
+      tr th:first-child,
+      tr td:first-child {
+        border-left: 1px solid #ddd;
+      }
+
+      tr th:last-child,
+      tr td:last-child {
+        border-right: 1px solid #ddd;
+      }
+
+      thead tr th:first-child {
+        border-radius: 20px 0 0 0;
+      }
+
+      thead tr th:last-child {
+        border-radius: 0 20px 0 0;
+      }
+
+      tbody td {
+        text-align: left;
+        border: none;
+        padding: 10px 15px;
+        font-size: 14px;
+        vertical-align: top;
+      }
+
+      tbody tr:nth-child(even) {
+        background: #f8f8f8;
+      }
+
+      tbody tr:last-child td {
+        border-bottom: 1px solid #ddd;
+      }
+
+      tbody tr:last-child td:first-child {
+        border-radius: 0 0 0 20px;
+      }
+
+      tbody tr:last-child td:last-child {
+        border-radius: 0 0 20px 0;
+      }
+    }
+
     p {
       margin: 1em 0;
     }
@@ -43,7 +102,7 @@
       background: #fff;
       padding: 15px 20px 15px 45px;
       margin: 1.5em 20px;
-      // position: relative;
+      position: relative;
 
       /*Font*/
       font-family: Georgia, serif;
@@ -52,8 +111,8 @@
       color: #666;
 
       /*Borders - (Optional)*/
-      // border-left: 15px solid $accent;
-      border-right: 14px solid $accent;
+      border-left: 14px solid $accent;
+      border-right: 4px solid $accent;
 
       /*Box Shadow - (Optional)*/
       -moz-box-shadow: 2px 2px 15px #ccc;
@@ -65,25 +124,25 @@
         line-height: 1.6;
       }
 
-      // &::before {
-      //   content: "\201C"; /*Unicode for Left Double Quote*/
+      &::before {
+        content: "\201C"; /*Unicode for Left Double Quote*/
 
-      //   /*Font*/
-      //   font-family: Georgia, serif;
-      //   font-size: 60px;
-      //   font-weight: bold;
-      //   color: #999;
+        /*Font*/
+        font-family: Georgia, serif;
+        font-size: 60px;
+        font-weight: bold;
+        color: #999;
 
-      //   /*Positioning*/
-      //   position: absolute;
-      //   left: 10px;
-      //   top: 5px;
-      // }
+        /*Positioning*/
+        position: absolute;
+        left: 10px;
+        top: 5px;
+      }
 
-      // &::after {
-      //   /*Reset to make sure*/
-      //   content: "";
-      // }
+      &::after {
+        /*Reset to make sure*/
+        content: "";
+      }
 
       & a {
         text-decoration: none;
