--- a/src/templates/pages/gallery.html
+++ b/src/templates/pages/gallery.html
@@ -25,8 +25,89 @@
               <ul class="gallery__list">
                 <li class="gallery__item">
                   <img src="https://picsum.photos/1200/900?grayscale" alt="" />
+                  <div class="gallery__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они щеке жаренные!</div>
                 </li>
                 <li class="gallery__item">
+                  <img src="https://picsum.photos/1200/900?grayscale" alt="" />
+                  <div class="gallery__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они щеке жаренные!</div>
+                </li>
+                <li class="gallery__item">
+                  <img src="https://picsum.photos/1200/900?grayscale" alt="" />
+                  <div class="gallery__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они щеке жаренные!</div>
+                </li>
+                <li class="gallery__item">
+                  <img src="https://picsum.photos/1200/900?grayscale" alt="" />
+                  <div class="gallery__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они щеке жаренные!</div>
+                </li>
+                <li class="gallery__item">
+                  <img src="https://picsum.photos/1200/900?grayscale" alt="" />
+                  <div class="gallery__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они щеке жаренные!</div>
+                </li>
+                <li class="gallery__item">
+                  <img src="https://picsum.photos/1200/900?grayscale" alt="" />
+                  <div class="gallery__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они щеке жаренные!</div>
+                </li>
+                <li class="gallery__item">
+                  <img src="https://picsum.photos/1200/900?grayscale" alt="" />
+                  <div class="gallery__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они щеке жаренные!</div>
+                </li>
+                <li class="gallery__item">
+                  <img src="https://picsum.photos/1200/900?grayscale" alt="" />
+                  <div class="gallery__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они щеке жаренные!</div>
+                </li>
+                <li class="gallery__item">
+                  <img src="https://picsum.photos/1200/900?grayscale" alt="" />
+                  <div class="gallery__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они щеке жаренные!</div>
+                </li>
+                <li class="gallery__item">
+                  <img src="https://picsum.photos/1200/900?grayscale" alt="" />
+                  <div class="gallery__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они щеке жаренные!</div>
+                </li>
+                <li class="gallery__item">
+                  <img src="https://picsum.photos/1200/900?grayscale" alt="" />
+                  <div class="gallery__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они щеке жаренные!</div>
+                </li>
+                <li class="gallery__item">
+                  <img src="https://picsum.photos/1200/900?grayscale" alt="" />
+                  <div class="gallery__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они щеке жаренные!</div>
+                </li>
+                <li class="gallery__item">
+                  <img src="https://picsum.photos/1200/900?grayscale" alt="" />
+                  <div class="gallery__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они щеке жаренные!</div>
+                </li>
+                <li class="gallery__item">
+                  <img src="https://picsum.photos/1200/900?grayscale" alt="" />
+                  <div class="gallery__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они щеке жаренные!</div>
+                </li>
+                <li class="gallery__item">
+                  <img src="https://picsum.photos/1200/900?grayscale" alt="" />
+                  <div class="gallery__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они щеке жаренные!</div>
+                </li>
+                <li class="gallery__item">
+                  <img src="https://picsum.photos/1200/900?grayscale" alt="" />
+                  <div class="gallery__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они щеке жаренные!</div>
+                </li>
+                <li class="gallery__item">
+                  <img src="https://picsum.photos/1200/900?grayscale" alt="" />
+                  <div class="gallery__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они щеке жаренные!</div>
+                </li>
+                <li class="gallery__item">
+                  <img src="https://picsum.photos/1200/900?grayscale" alt="" />
+                  <div class="gallery__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они щеке жаренные!</div>
+                </li>
+                <li class="gallery__item">
+                  <img src="https://picsum.photos/1200/900?grayscale" alt="" />
+                  <div class="gallery__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они щеке жаренные!</div>
+                </li>
+                <li class="gallery__item">
+                  <img src="https://picsum.photos/1200/900?grayscale" alt="" />
+                  <div class="gallery__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они щеке жаренные!</div>
+                </li>
+                <li class="gallery__item">
+                  <img src="https://picsum.photos/1200/900?grayscale" alt="" />
+                  <div class="gallery__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они щеке жаренные!</div>
+                </li>
+                <!-- <li class="gallery__item">
                   <img src="https://picsum.photos/1200/900?grayscale" alt="" />
                 </li>
                 <li class="gallery__item">
@@ -202,7 +283,7 @@
                 </li>
                 <li class="gallery__item">
                   <img src="https://picsum.photos/1200/900?grayscale" alt="" />
-                </li>
+                </li> -->
               </ul>
             </div>
           </div>
