--- a/src/templates/pages/index.html
+++ b/src/templates/pages/index.html
@@ -77,7 +77,13 @@
                   командира не поднять руку со снаряжёнными обоймами, могли запросто отстранить от полётов. После лётной смены оружие и патроны сдавали дежурному по полку.
                 </p>
 
-                <time class="content__date">11.04.2022</time>
+                <div class="content__info">
+                  <div class="content__author">
+                    author
+                  </div>
+                  <time class="content__date">11.04.2022</time>
+
+                </div>
               </article>
 
               <article class="content__item">
@@ -196,7 +202,15 @@
                         предельных углов атаки и перегрузки, чтобы выполнить сложные фигуры пилотажа. В результате во время одного из манёвров он испытал восьмикратную перегрузку и
                         потерял контроль над машиной»
                       </p>
-                      <time class="news__date">12.04.2022</time>
+
+
+                                      <div class="content__info">
+                  <div class="content__author">
+                    author
+                  </div>
+                  <time class="content__date">11.04.2022</time>
+
+                </div
                     </div>
                   </article>
                 </li>
