--- a/src/scss/pages/gallery.scss
+++ b/src/scss/pages/gallery.scss
@@ -1,16 +1,16 @@
 .gallery {
+  border: 4px solid $accent;
+  border-bottom: 0px;
+  padding: 30px;
+  border-radius: 12px 12px 0 0;
+  min-height: 100vh;
+  background-color: #fff;
+
   &__container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    max-width: 1300px;
-    border: 4px solid $accent;
-    border-bottom: 0px;
-    padding: 30px;
-    border-radius: 12px 12px 0 0;
-    min-height: 100vh;
-    background-color: #fff;
   }
 
   &__title {
@@ -41,10 +41,16 @@
     box-shadow: rgba(0, 0, 0, 0.4) 0 2px 4px, rgba(0, 0, 0, 0.3) 0 7px 13px -3px, rgba(0, 0, 0, 0.2) 0 -3px 0 inset;
 
     & > img {
-      object-fit: cover;
+      margin-bottom: 10px;
+      object-fit: contain!important;
       width: 414px;
       max-height: 280px;
       min-height: 100%;
     }
+  }
+
+  &__text {
+    padding: 10px;
+    text-align: center;
   }
 }
