--- a/src/templates/pages/index.html
+++ b/src/templates/pages/index.html
@@ -22,7 +22,7 @@
           @@include('templates/components/_bar.html')
 
           <!-- Истории. -->
-          <section class="content">
+          <section class=`"content">
             <h2 class="title">Самое важное</h2>
 
             <div class="content__inner">
