--- a/src/templates/pages/author.html
+++ b/src/templates/pages/author.html
@@ -46,6 +46,7 @@
             </div>
 
             <h2 class="author__title title">Произведения</h2>
+            <h3 class="author__subtitle">Зарницы памяти. Записки курсанта летного училища.</h3>
 
             <ol class="author__content" reversed data-aos="fade-up" data-aos-duration="1200">
               <li class="author__item">
