--- a/src/scss/components/_content.scss
+++ b/src/scss/components/_content.scss
@@ -27,8 +27,12 @@
     box-shadow: rgba(0, 0, 0, 0.4) 0 2px 4px, rgba(0, 0, 0, 0.3) 0 7px 13px -3px, rgba(0, 0, 0, 0.2) 0 -3px 0 inset;
     padding: 12px;
     border-radius: 6px;
+    max-width: 289px;
     background-image: $bg;
     transition: transform 0.4s, box-shadow 0.4s;
+    @include mq("768") {
+      min-width: 100%;
+    }
 
     &:first-child {
       grid-column: 1/3;
@@ -99,6 +103,9 @@
     @include mq("1024") {
       width: 100vw;
       height: 100%;
+    }
+        @include mq("768") {
+      max-height: 320px;
     }
   }
 
