--- a/src/scss/components/_news.scss
+++ b/src/scss/components/_news.scss
@@ -5,13 +5,16 @@
   border-radius: 12px 12px 0 0;
   min-height: 100vh;
   background-color: #fff;
+  @include mq("480") {
+    padding: 25px 25px 90px;
+  }
 
   &__list {
     margin-bottom: 40px;
   }
 
   &__item {
-    box-shadow: rgba(0,0,0,.4) 0 2px 4px, rgba(0,0,0,.3) 0 7px 13px -3px, rgba(0,0,0,.2) 0 -3px 0 inset;
+    box-shadow: rgba(0, 0, 0, 0.4) 0 2px 4px, rgba(0, 0, 0, 0.3) 0 7px 13px -3px, rgba(0, 0, 0, 0.2) 0 -3px 0 inset;
     &:not(:last-child) {
       margin-bottom: 25px;
     }
