--- a/src/scss/pages/product.scss
+++ b/src/scss/pages/product.scss
@@ -28,7 +28,7 @@
     table {
       width: 100%;
       border: none;
-      margin-bottom: 20px;
+      margin-bottom: 0 auto 20px !important;
       border-collapse: separate;
 
       thead th {
@@ -52,11 +52,11 @@
       }
 
       thead tr th:first-child {
-        border-radius: 20px 0 0 0;
+        // border-radius: 20px 0 0 0;
       }
 
       thead tr th:last-child {
-        border-radius: 0 20px 0 0;
+        // border-radius: 0 20px 0 0;
       }
 
       tbody td {
@@ -76,16 +76,16 @@
       }
 
       tbody tr:last-child td:first-child {
-        border-radius: 0 0 0 20px;
+        // border-radius: 0 0 0 20px;
       }
 
       tbody tr:last-child td:last-child {
-        border-radius: 0 0 20px 0;
+        // border-radius: 0 0 20px 0;
       }
     }
 
     p {
-      margin: 1em 0;
+      margin: 0;
     }
 
     ul {
@@ -183,11 +183,25 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    margin: 20px 0;
     width: 100%;
 
     & small {
-      font-size: 14px;
+      border: 2px solid $accent;
+      border-radius: 8px;
       margin: 10px 16px;
+      padding: 2px 10px;
+      font-size: 14px;
+      background-color: #fff;
+      color: $accent;
+
+      & a {
+        color: #666;
+
+        &:hover {
+          cursor: pointer;
+        }
+      }
     }
   }
 }
