--- a/src/templates/components/_header.html
+++ b/src/templates/components/_header.html
@@ -46,6 +46,12 @@
               <use xlink:href="images/sprite.svg#author"></use>
             </svg>
             <a href="./author.html" class="menu__link">Юрий Фёдоров</a>
+
+            <ul class="dropdown-menu">
+              <li class="menu-item">
+                <a href="#">Зарницы памяти. Записки курсанта лётного училища.</a>
+              </li>
+            </ul>
           </li>
           <li class="menu__item">
             <svg class="menu__pic">
