--- a/src/templates/pages/index.html
+++ b/src/templates/pages/index.html
@@ -22,7 +22,7 @@
           @@include('templates/components/_bar.html')
 
           <!-- Истории. -->
-          <section class=`"content">
+          <section class="content">
             <h2 class="title">Самое важное</h2>
 
             <div class="content__inner">
@@ -133,47 +133,41 @@
             <div class="contaner">
               <h2 class="title">Наши выпускники</h2>
             </div>
-            <div class="slider__container swiper">
-              <ul class="slider__list swiper-wrapper">
+            <div class="slider__container">
+              <ul data-simple-slider class="slider__list">
                 <li class="slider__item swiper-slide">
-                  <a href="./product.html" target="_blank" class="slider__link swiper-zoom-container">
-                    <img data-src="images/slider/1.jpg" src="images/1x1.png" alt="Фото" class="slider__img swiper-lazy" />
-                    <div class="swiper-lazy-preloader"></div>
+                  <a href="./product.html" target="_blank" class="slider__link">
+                    <img src="https://picsum.photos/300/200?grayscale" alt="Фото" class="slider__img" />
+                  </a>
+
+                                    <a href="./product.html" target="_blank" class="slider__link">
+                    <img src="https://picsum.photos/300/200?grayscale" alt="Фото" class="slider__img" />
+                  </a>
+
+                                    <a href="./product.html" target="_blank" class="slider__link">
+                    <img src="https://picsum.photos/300/200?grayscale" alt="Фото" class="slider__img" />
+                  </a>
+
+                                    <a href="./product.html" target="_blank" class="slider__link">
+                    <img src="https://picsum.photos/300/200?grayscale" alt="Фото" class="slider__img" />
                   </a>
                 </li>
 
-                <li class="slider__item swiper-slide">
-                  <a href="./product.html" target="_blank" class="slider__link swiper-zoom-container">
-                    <img data-src="images/slider/2.jpg" src="images/1x1.png" alt="Фото" class="slider__img swiper-lazy" />
-                    <div class="swiper-lazy-preloader"></div>
+                <li class="slider__item">
+                  <a href="./product.html" target="_blank" class="slider__link">
+                    <img src="https://picsum.photos/300/200?grayscale" alt="Фото" class="slider__img" />
                   </a>
-                </li>
 
-                <li class="slider__item swiper-slide">
-                  <a href="./product.html" target="_blank" class="slider__link swiper-zoom-container">
-                    <img data-src="images/slider/3.jpg" src="images/1x1.png" alt="Фото" class="slider__img swiper-lazy" />
-                    <div class="swiper-lazy-preloader"></div>
+                  <a href="./product.html" target="_blank" class="slider__link">
+                    <img src="https://picsum.photos/300/200?grayscale" alt="Фото" class="slider__img" />
                   </a>
-                </li>
 
-                <li class="slider__item swiper-slide">
-                  <a href="./product.html" target="_blank" class="slider__link swiper-zoom-container">
-                    <img data-src="images/slider/4.jpg" src="images/1x1.png" alt="Фото" class="slider__img swiper-lazy" />
-                    <div class="swiper-lazy-preloader"></div>
+                                    <a href="./product.html" target="_blank" class="slider__link">
+                    <img src="https://picsum.photos/300/200?grayscale" alt="Фото" class="slider__img" />
                   </a>
-                </li>
 
-                <li class="slider__item swiper-slide">
-                  <a href="./product.html" target="_blank" class="slider__link swiper-zoom-container">
-                    <img data-src="images/slider/5.jpg" src="images/1x1.png" alt="Фото" class="slider__img swiper-lazy" />
-                    <div class="swiper-lazy-preloader"></div>
-                  </a>
-                </li>
-
-                <li class="slider__item swiper-slide">
-                  <a href="./product.html" target="_blank" class="slider__link swiper-zoom-container">
-                    <img data-src="images/slider/6.jpg" src="images/1x1.png" alt="Фото" class="slider__img swiper-lazy" />
-                    <div class="swiper-lazy-preloader"></div>
+                                    <a href="./product.html" target="_blank" class="slider__link">
+                    <img src="https://picsum.photos/300/200?grayscale" alt="Фото" class="slider__img" />
                   </a>
                 </li>
               </ul>
