--- a/src/scss/components/_content.scss
+++ b/src/scss/components/_content.scss
@@ -69,12 +69,18 @@
       @include mq("1024") {
         height: 100%;
       }
+      @include mq("768") {
+        max-height: 240px;
+      }
+      @include mq("480") {
+        max-height: 200px;
+      }
     }
 
     &:first-child .content__text {
       margin-bottom: 26px;
       font-size: 16px;
-      @include txt($lc: 8);
+      @include txt($lc: 3);
     }
 
     &:hover {
@@ -104,8 +110,11 @@
       width: 100vw;
       height: 100%;
     }
-        @include mq("768") {
-      max-height: 320px;
+    @include mq("768") {
+      max-height: 240px;
+    }
+    @include mq("480") {
+      max-height: 200px;
     }
   }
 
@@ -128,6 +137,11 @@
     text-shadow: 1px 0 0 rgba(0, 0, 0, 0.8);
     overflow: hidden;
     @include txt($lc: 3);
+
+    @include mq("768") {
+      margin-bottom: 26px;
+      font-size: 16px;
+    }
   }
 
   &__info {
@@ -140,6 +154,7 @@
   &__author {
     position: relative;
     padding-left: 18px;
+    font-size: 14px;
 
     &::before {
       content: "";
@@ -160,6 +175,7 @@
     max-width: 200px;
     margin-left: auto;
     padding-left: 18px;
+    font-size: 14px;
 
     &::before {
       content: "";
