--- a/src/templates/pages/index.html
+++ b/src/templates/pages/index.html
@@ -133,45 +133,61 @@
             <div class="contaner">
               <h2 class="title">Наши выпускники</h2>
             </div>
-            <div class="slider__container">
-              <ul data-simple-slider class="slider__list">
-                <li class="slider__item swiper-slide">
-                  <a href="./product.html" target="_blank" class="slider__link">
-                    <img src="https://picsum.photos/300/200?grayscale" alt="Фото" class="slider__img" />
-                  </a>
+<div class="itcss">
+              <div class="slider__container itcss__wrapper">
+                <ul data-simple-slider class="slider__list itcss__items">
+                  <li class="slider__item swiper-slide itcss__item">
+                    <a href="./product.html" target="_blank" class="slider__link">
+                      <img src="https://picsum.photos/300/200?grayscale" alt="Фото" class="slider__img" />
+                    </a>
+                  </li>
 
-                                    <a href="./product.html" target="_blank" class="slider__link">
-                    <img src="https://picsum.photos/300/200?grayscale" alt="Фото" class="slider__img" />
-                  </a>
 
-                                    <a href="./product.html" target="_blank" class="slider__link">
-                    <img src="https://picsum.photos/300/200?grayscale" alt="Фото" class="slider__img" />
-                  </a>
+                  <li class="slider__item swiper-slide itcss__item">
+                    <a href="./product.html" target="_blank" class="slider__link">
+                      <img src="https://picsum.photos/300/200?grayscale" alt="Фото" class="slider__img" />
+                    </a>
+                  </li>
 
-                                    <a href="./product.html" target="_blank" class="slider__link">
-                    <img src="https://picsum.photos/300/200?grayscale" alt="Фото" class="slider__img" />
-                  </a>
-                </li>
+                  <li class="slider__item swiper-slide itcss__item">
+                    <a href="./product.html" target="_blank" class="slider__link">
+                      <img src="https://picsum.photos/300/200?grayscale" alt="Фото" class="slider__img" />
+                    </a>
+                  </li>
 
-                <li class="slider__item">
-                  <a href="./product.html" target="_blank" class="slider__link">
-                    <img src="https://picsum.photos/300/200?grayscale" alt="Фото" class="slider__img" />
-                  </a>
+                  <li class="slider__item swiper-slide itcss__item">
+                    <a href="./product.html" target="_blank" class="slider__link">
+                      <img src="https://picsum.photos/300/200?grayscale" alt="Фото" class="slider__img" />
+                    </a>
+                  </li>
 
-                  <a href="./product.html" target="_blank" class="slider__link">
-                    <img src="https://picsum.photos/300/200?grayscale" alt="Фото" class="slider__img" />
-                  </a>
+                  <li class="slider__item swiper-slide itcss__item">
+                    <a href="./product.html" target="_blank" class="slider__link">
+                      <img src="https://picsum.photos/300/200?grayscale" alt="Фото" class="slider__img" />
+                    </a>
+                  </li>
 
-                                    <a href="./product.html" target="_blank" class="slider__link">
-                    <img src="https://picsum.photos/300/200?grayscale" alt="Фото" class="slider__img" />
-                  </a>
+                  <li class="slider__item swiper-slide itcss__item">
+                    <a href="./product.html" target="_blank" class="slider__link">
+                      <img src="https://picsum.photos/300/200?grayscale" alt="Фото" class="slider__img" />
+                    </a>
+                  </li>
 
-                                    <a href="./product.html" target="_blank" class="slider__link">
-                    <img src="https://picsum.photos/300/200?grayscale" alt="Фото" class="slider__img" />
-                  </a>
-                </li>
-              </ul>
-            </div>
+                  <li class="slider__item swiper-slide itcss__item">
+                    <a href="./product.html" target="_blank" class="slider__link">
+                      <img src="https://picsum.photos/300/200?grayscale" alt="Фото" class="slider__img" />
+                    </a>
+                  </li>
+
+                  <li class="slider__item swiper-slide itcss__item">
+                    <a href="./product.html" target="_blank" class="slider__link">
+                      <img src="https://picsum.photos/300/200?grayscale" alt="Фото" class="slider__img" />
+                    </a>
+                  </li>
+
+                </ul>
+              </div>
+</div>
           </section>
 
           <!-- Новостные каточки -->
